; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_phy_device.c_phy_register_fixup_for_uid.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_phy_device.c_phy_register_fixup_for_uid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_device = type opaque
%struct.phy_device.0 = type opaque

@PHY_ANY_ID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @phy_register_fixup_for_uid(i32 %0, i32 %1, i32 (%struct.phy_device*)* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32 (%struct.phy_device*)*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 (%struct.phy_device*)* %2, i32 (%struct.phy_device*)** %6, align 8
  %7 = load i32, i32* @PHY_ANY_ID, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32 (%struct.phy_device*)*, i32 (%struct.phy_device*)** %6, align 8
  %11 = bitcast i32 (%struct.phy_device*)* %10 to i32 (%struct.phy_device.0*)*
  %12 = call i32 @phy_register_fixup(i32 %7, i32 %8, i32 %9, i32 (%struct.phy_device.0*)* %11)
  ret i32 %12
}

declare dso_local i32 @phy_register_fixup(i32, i32, i32, i32 (%struct.phy_device.0*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
